--- a/html/css/sample.css
+++ b/html/css/sample.css
@@ -1,3 +1,15 @@
+/*
+*{}
+p.class{}
+#id {}
+*/
+
 p {  
   color: blue;
+}
+
+h1 {
+  padding: .5em .75em;
+  background-color: #f6f6f6;
+  border: 3px double #ccc;
 }
